# DomainDetermine

./: AI-collaboration.md  DomainDetermine.code-workspace  README.md  environment.yml  pyproject.toml
.artifacts/local/: local-graph.ttl
.artifacts/remote/: remote-json.json  remote-materialized.owl  remote.owl
.github/readiness/: config.yml  gate_config.yml  release_config.yml
.github/workflows/: ci.yml  readiness.yml
docs/: READINESS.md  architecture.md  cli.md  cli_extensibility.md  coverage_planner.md  dependencies.md  deployment_readiness.md  getting_started.md  governance.md  kos_ingestion.md  llm_engine_build.md  llm_observability.md  llm_serving_stack.md  mapping.md  prompt_pack.md  readiness.md  service_layer.md
docs/gui/: prototype_plan.md
docs/prompt_pack/: CHANGELOG.md  changelog_template.md  governance_review.md  releases.jsonl
docs/samples/: mapping_calibration_samples.csv
docs/samples/kos_ingestion/: manifest_sample.json  run_summary.json
llm-demo/: README.md  runner.py
llm-demo/config/: docker-compose.yml  model.yaml  prerequisites.yaml
llm-demo/docs/: prerequisites.md
openspec/: project.md
prototype/: main.py
scripts/e2e/: run_readiness.py
scripts/llm/: build_engine.sh  docker-compose.triton.yml  serve_triton.sh
src/DomainDetermine/: __init__.py
src/DomainDetermine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auditor.py  test_cli_app.py  test_cli_config.py  test_cli_plugins.py  test_cli_profiles.py  test_connectors.py  test_coverage_planner.py  test_eval_suite.py  test_governance.py  test_governance_diffs.py  test_governance_registry.py  test_governance_versioning.py  test_governance_waivers.py  test_kos_ingestion_validation.py  test_llm_demo_warmup.py  test_llm_engine.py  test_llm_observability.py  test_mapping_calibration.py  test_mapping_pipeline.py  test_mapping_policy.py  test_mapping_telemetry.py  test_overlay.py  test_prompt_pack_calibration_assets.py  test_prompt_pack_metrics.py  test_prompt_pack_observability.py  test_prompt_pack_quality.py  test_prompt_pack_runtime.py  test_prompt_pack_versioning.py  test_query_service.py  test_readiness_gate.py  test_readiness_manifest.py  test_readiness_pipeline.py  test_service_app.py  test_validation.py
tests/gui_adapters/: test_shell.py
tmp_cli_test/: cli.toml
tools/llm/: download_snapshot.py  prepare_qwen3.py  quantize_awq.py  smoke_test.py  write_manifest.py
(+381 files in other folders)
