[project]
name = "DomainDetermine"
version = "0.1.0"
description = "DomainDetermine"
readme = "README.md"
dependencies = [
    "SPARQLWrapper",
    "allpairspy",
    "black",
    "duckdb",
    "faiss-cpu",
    "fastapi",
    "httpx",
    "jsonschema",
    "krippendorff",
    "matplotlib",
    "numpy",
    "obonet",
    "ortools",
    "owlready2",
    "pandas",
    "pandera",
    "plotly",
    "pronto",
    "pulp",
    "pyarrow",
    "pydantic",
    "pyjwt",
    "pyshacl",
    "pytest",
    "python-json-logger",
    "rapidfuzz",
    "rdflib",
    "rich",
    "ruff",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "SPARQLWrapper",
    "spacy",
    "statsmodels",
    "tenacity",
    "typer[all]",
    "uvicorn",
    "tensorrt-llm",
]


[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
