[project]
name = "DomainDetermine"
version = "0.1.0"
description = "DomainDetermine"
readme = "README.md"
dependencies = [
    "dash",
    "anyio",
    "hypothesis",
    "pluggy",
    "typeguard",
    "SPARQLWrapper",
    "allpairspy",
    "duckdb",
    "faiss-cpu",
    "fastapi",
    "httpx",
    "jsonschema",
    "krippendorff",
    "matplotlib",
    "numpy",
    "obonet",
    "ortools",
    "owlready2",
    "pandas",
    "pandera",
    "plotly",
    "pronto",
    "pulp",
    "pyarrow",
    "pydantic",
    "pyjwt",
    "pyyaml",
    "pyshacl",
    "python-json-logger",
    "rapidfuzz",
    "rdflib",
    "rich",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "spacy",
    "statsmodels",
    "tenacity",
    "transformers",
    "typer[all]",
    "uvicorn",
    "nicegui",
    "pydantic-settings",
    "fastapi-websocket-pubsub",
    "sqlitedict",
    "redis",
    "fastapi-utils",
    "flask",
    "flask-cors",
]


[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
service = [
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
llm = [
    "tensorrt-llm",
]


[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
